# canonical

./: .gitignore  CONTRACTS.md  Cargo.toml  DRIFT_LOG.md  README.md  package.json
.github/workflows/: ci.yml
architecture/: agen-sentinel.md  agent-always-in-the-loop.md  agent-flow-approval-model.md  agent-security-jit-pam-itdr-platform-security.md  conclusion-loops.md  fabric-platform-spec-bundle.md  fabric-platform-spec.md  feature-as-data.md  governance-lifecycle-model.md  platform-os-spec.md  platform-theory.md  policies-spec.md  security-as-a-service.md  useful-conversation-value-agent.md  w3c-schemaorg-industry-function-policy-model.md
control-panel/: FLOW_ORDER_DIAGRAM.md  autonomyx-control-panel.html  workspace-first-console.html
crates/canonical-core/: Cargo.toml
crates/canonical-core/src/: box.rs  codec.rs  contract.rs  cors.rs  ed25519.rs  edge.rs  identity.rs  instruction.rs  kernel.rs  lib.rs  message.rs  resource.rs  sha512.rs  sys.rs
crates/canonical-core/tests/: box_contract.rs  contract_api.rs  model.rs
crates/canonical-runtime/: Cargo.toml
crates/canonical-runtime/src/: lib.rs  net.rs  wire.rs  working_group.rs
crates/canonical-runtime/tests/: runtime.rs
crates/edge-cli/: Cargo.toml
crates/edge-cli/src/: main.rs
crates/fabric-api/: Cargo.toml
deploy/: github-deploy.yaml
docs/: APP_AS_TOOL.md  BOX_STORAGE.md  GO_WRITER.md  PLATFORM_PROTOCOL.md  TOOL_AS_SKILL.md  activitypub-alignment.md  box-model.md  intelligent-operating-agents-at-work.md  platform-theory-announcement.md
examples/tasks/: basic-task.json
openapi/: fabric-contract-api.yaml
proto/: orb.proto
protocols/: agent-context-protocol.yaml
runtime/: fabric-kernel-mvp.md
sdk/go/canonical/: go.mod
sdk/js/: package.json
src/core/: edge.ts  identity.ts  index.ts
tests/: identity.test.ts
ts/: README.md  package-lock.json  package.json  tsconfig.json
ts/examples/: demo.ts
ts/src/: index.ts
ts/src/core/: codec.ts  core.ts  cors.ts  edge.ts  message.ts  resource.ts
ts/src/runtime/: index.ts  working-group.ts
ts/tests/: caveats-revocation.test.ts  core-minimal.test.ts  cors.test.ts  edge.test.ts  working-group.test.ts
