[workspace]
members = [
  "crates/canonical-core",
  "crates/canonical-runtime",
  "crates/edge-cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/openautonomyx/canonical"

# No [workspace.dependencies]. The canonical core is built, not composed: it has
# zero third-party dependencies, so there is no SBOM to audit and no supply
# chain to compromise. The crypto (Ed25519 + SHA-512) is implemented in-tree.
