[workspace]
members = [
  "crates/canonical-core",
  "crates/edge-cli",
  "crates/fabric-api"
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/openautonomyx/canonical"

[workspace.dependencies]
anyhow = "1.0"
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
tower-http = { version = "0.5", features = ["trace"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
