[package]
name = "edge-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "canonical-edge"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
canonical-core = { path = "../canonical-core" }
clap.workspace = true
serde_json.workspace = true
